--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Satellitt i Norge - Hjem</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
 		<div class="header">
