--- a/theory/index.html
+++ b/theory/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Satellitt i Norge - </title>
+	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
 </head>
 
 <body>
