--- a/guide/montering/index.html
+++ b/guide/montering/index.html
@@ -10,8 +10,34 @@
     <link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/guide.css" />
 </head>
 
-<body>
-    <header class="tempheader"></header>
+<body class="guide-body">
+    <header class="tempheader"><nav>
+  
+    <a href="/eit-satellitt-i-norge/" >
+      Hjem
+    </a>
+  
+    <a href="/eit-satellitt-i-norge/about" >
+      Om
+    </a>
+  
+    <a href="/eit-satellitt-i-norge/purchase" >
+      Innkjøpsliste
+    </a>
+  
+    <a href="/eit-satellitt-i-norge/theory" >
+      Teori og forklaringer
+    </a>
+  
+    <a href="/eit-satellitt-i-norge/guide" >
+      Guide
+    </a>
+  
+    <a href="/eit-satellitt-i-norge/satellites" >
+      Satellitter
+    </a>
+  
+</nav></header>
     <nav class="sidebar">
         
         <a class="sidebar-item" href="/eit-satellitt-i-norge/guide/" >
