deploy: c4671c3ad415a5fdd34ab9e9cada89dd15a4afb7

--- a/guide/index.html
+++ b/guide/index.html
@@ -11,33 +11,47 @@
 </head>
 
 <body class="guide-body">
-    <header class="tempheader"><nav>
+    <header class="tempheader">
+        <nav>
   
     <a href="/eit-satellitt-i-norge/" >
-      Hjem
+			<div class="nav-item">
+				Hjem
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/about" >
-      Om
+			<div class="nav-item">
+				Om
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/purchase" >
-      Innkjøpsliste
+			<div class="nav-item">
+				Innkjøpsliste
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/theory" >
-      Teori og forklaringer
+			<div class="nav-item">
+				Teori og forklaringer
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/guide" >
-      Guide
+			<div class="nav-item">
+				Guide
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/satellites" >
-      Satellitter
+			<div class="nav-item">
+				Satellitter
+			</div>
     </a>
   
-</nav></header>
+</nav>
+    </header>
     <nav class="sidebar">
         
         <a class="sidebar-item" href="/eit-satellitt-i-norge/guide/"  style="font-weight: bold;" >
