--- a/purchase/index.html
+++ b/purchase/index.html
@@ -11,27 +11,39 @@
 	<nav>
   
     <a href="/eit-satellitt-i-norge/" >
-      Hjem
+			<div class="nav-item">
+				Hjem
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/about" >
-      Om
+			<div class="nav-item">
+				Om
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/purchase" >
-      Innkjøpsliste
+			<div class="nav-item">
+				Innkjøpsliste
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/theory" >
-      Teori og forklaringer
+			<div class="nav-item">
+				Teori og forklaringer
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/guide" >
-      Guide
+			<div class="nav-item">
+				Guide
+			</div>
     </a>
   
     <a href="/eit-satellitt-i-norge/satellites" >
-      Satellitter
+			<div class="nav-item">
+				Satellitter
+			</div>
     </a>
   
 </nav>
