deploy: 4e3d79ce4f8b09eb66ff797e34685e18c7243cae

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -8,46 +8,60 @@
 </head>
 
 <body>
-	<nav>
+	<nav class="nav-bar">
   
-    <a href="/eit-satellitt-i-norge/" >
-			<div class="nav-item">
-				Hjem
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/">
+    <div class="nav-item">
+      <p>
+        Hjem
+      </p>
+    </div>
+  </a>
   
-    <a href="/eit-satellitt-i-norge/about" >
-			<div class="nav-item">
-				Om
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/about/">
+    <div class="nav-item">
+      <p>
+        Om
+      </p>
+    </div>
+  </a>
   
-    <a href="/eit-satellitt-i-norge/purchase" >
-			<div class="nav-item">
-				Innkjøpsliste
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/purchase/">
+    <div class="nav-item">
+      <p>
+        Innkjøpsliste
+      </p>
+    </div>
+  </a>
   
-    <a href="/eit-satellitt-i-norge/theory" >
-			<div class="nav-item">
-				Teori og forklaringer
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/theory/">
+    <div class="nav-item">
+      <p>
+        Teori og forklaringer
+      </p>
+    </div>
+  </a>
   
-    <a href="/eit-satellitt-i-norge/guide" >
-			<div class="nav-item">
-				Guide
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/guide/">
+    <div class="nav-item">
+      <p>
+        Guide
+      </p>
+    </div>
+  </a>
   
-    <a href="/eit-satellitt-i-norge/satellites" >
-			<div class="nav-item">
-				Satellitter
-			</div>
-    </a>
+  <a href="/eit-satellitt-i-norge/satellites/">
+    <div class="nav-item">
+      <p>
+        Satellitter
+      </p>
+    </div>
+  </a>
   
 </nav>
-	<h1>Satellitter</h1>
+	<div class="content-wrapper">
+		<h1>Satellitter</h1>
+	</div>
 </body>
 
 </html>
