--- a/theory/index.html
+++ b/theory/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Satellitt i Norge - </title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
 </head>
 
