deploy: a4c2e0a83cba8ab679c39010bf26bbd294def56a

--- a/faq/index.html
+++ b/faq/index.html
@@ -3,11 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Satellitt i Norge - Hjem</title>
+	<title>Satellitt i Norge - </title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
-	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/main.css" />
 </head>
 
 <body>
@@ -51,19 +50,9 @@
     
   </div>
 </nav>
-<h1>Nedlasting av data fra en ekte satellitt</h1>
-<div class="introduction">
-	<div class="content-wrap">
-		<h1>Har du ønsket å motta satellittdata i norge?</h1>
-		<p>Det finnes mange satellitter som sirkulerer rundt jorda, og av disse er det flere som sender kontinuerlig
-			informasjon som alle kan motta. Av disse, er de fleste værsatellitter, men det finnes også satellitter som
-			NORSat.</p>
-		<p>Selv om det er relativt lett å få tak i mye av denne dataen fra nettsidene til eierne, er å motta data fra en
-			ekte satellitt som flyr over hodet ditt et kult hobbyprosjekt. Denne nettsiden er laget for å samle
-			informasjon om mottak fra satellitter i Norge, slik at det er lettere å få dette til.</p>
-		<p>Denne nettsiden skal hjelpe deg igang med å laste ned data fra ekte satelitter i Norge. Velkommen!</p>
+	<div class="content-wrapper">
+		<h1>FAQ</h1>
 	</div>
-</div>
 </body>
 
 </html>
