deploy: 855ac6519d6ebe5fe054a6c4014dd59dff69ba9e

--- a/mer-info/index.html
+++ b/mer-info/index.html
@@ -50,8 +50,13 @@
     
   </div>
 </nav>
-	<div class="content-wrapper">
-		<h1>Mer info</h1>
+	<div class="page-wrapper">
+		<div class="content-wrapper">
+			<h1>Mer info</h1>
+		</div>
+		<footer class="footer">
+
+</footer>
 	</div>
 </body>
 
