--- a/satellitter/index.html
+++ b/satellitter/index.html
@@ -50,8 +50,13 @@
     
   </div>
 </nav>
-	<div class="content-wrapper">
-		<h1>Satellitter</h1>
+	<div class="page-wrapper">
+		<div class="content-wrapper">
+			<h1>Satellitter</h1>
+		</div>
+		<footer class="footer">
+
+</footer>
 	</div>
 </body>
 
