deploy: 0c36f6676260d5091116be3c92a8d811a0dbf346

--- a/instruksjoner/index.html
+++ b/instruksjoner/index.html
@@ -81,7 +81,8 @@
     </nav>
     <div class="page-wrapper">
         <div class="content-wrapper">
-            <h1 id="instruksjoner">Instruksjoner</h1>
+            <div class="page">
+                <h1 id="instruksjoner">Instruksjoner</h1>
 
 <p>Hei på deg, her er litt informasjon</p>
 
@@ -129,6 +130,7 @@
 
 <p>Hei på deg, her er litt informasjon</p>
 
+            </div>
         </div>
         <footer class="footer">
 
