--- a/instruksjoner/montering/index.html
+++ b/instruksjoner/montering/index.html
@@ -81,12 +81,14 @@
     </nav>
     <div class="page-wrapper">
         <div class="content-wrapper">
-            <h1 id="montering">Montering</h1>
+            <div class="page">
+                <h1 id="montering">Montering</h1>
 
 <ol>
   <li>Følg med</li>
 </ol>
 
+            </div>
         </div>
         <footer class="footer">
 
