--- a/instruksjoner/montering/steg1/index.html
+++ b/instruksjoner/montering/steg1/index.html
@@ -81,13 +81,15 @@
     </nav>
     <div class="page-wrapper">
         <div class="content-wrapper">
-            <h1 id="1-spis-grandiosaen">1. Spis grandiosaen</h1>
+            <div class="page">
+                <h1 id="1-spis-grandiosaen">1. Spis grandiosaen</h1>
 
 <ol>
   <li>pizza</li>
   <li>øl</li>
 </ol>
 
+            </div>
         </div>
         <footer class="footer">
 
