--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 	<title>Satellitt i Norge - Hjem</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/eit-satellitt-i-norge/assets/css/fullpage.min.css" />
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/main.css" />
+	<script type="text/javascript" src="/eit-satellitt-i-norge/assets/scripts/fullpage.min.js"></script>
 </head>
 
 <body>
-	<nav class="nav-bar">
+	<div id="fullpage">
+	<div class="section">
+		<div class="full-page-wrapper">
+			<nav class="nav-bar">
   <a href="/eit-satellitt-i-norge/">
     <img src="/eit-satellitt-i-norge/assets/images/satellite.svg" height="30">
   </a>
@@ -51,19 +56,36 @@
     
   </div>
 </nav>
-<h1>Nedlasting av data fra en ekte satellitt</h1>
-<div class="introduction">
-	<div class="content-wrap">
-		<h1>Har du ønsket å motta satellittdata i norge?</h1>
-		<p>Det finnes mange satellitter som sirkulerer rundt jorda, og av disse er det flere som sender kontinuerlig
-			informasjon som alle kan motta. Av disse, er de fleste værsatellitter, men det finnes også satellitter som
-			NORSat.</p>
-		<p>Selv om det er relativt lett å få tak i mye av denne dataen fra nettsidene til eierne, er å motta data fra en
-			ekte satellitt som flyr over hodet ditt et kult hobbyprosjekt. Denne nettsiden er laget for å samle
-			informasjon om mottak fra satellitter i Norge, slik at det er lettere å få dette til.</p>
-		<p>Denne nettsiden skal hjelpe deg igang med å laste ned data fra ekte satelitter i Norge. Velkommen!</p>
+			<h1>Nedlasting av data fra en ekte satellitt</h1>
+			<div class="introduction">
+				<div class="content-wrap">
+					<h1>Har du ønsket å motta satellittdata i norge?</h1>
+					<p>Det finnes mange satellitter som sirkulerer rundt jorda, og av disse er det flere som sender
+						kontinuerlig
+						informasjon som alle kan motta. Av disse, er de fleste værsatellitter, men det finnes også
+						satellitter
+						som
+						NORSat.</p>
+					<p>Selv om det er relativt lett å få tak i mye av denne dataen fra nettsidene til eierne, er å motta
+						data
+						fra en
+						ekte satellitt som flyr over hodet ditt et kult hobbyprosjekt. Denne nettsiden er laget for å
+						samle
+						informasjon om mottak fra satellitter i Norge, slik at det er lettere å få dette til.</p>
+					<p>Denne nettsiden skal hjelpe deg igang med å laste ned data fra ekte satelitter i Norge.
+						Velkommen!
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
+	<div class="section">Some section</div>
+	<div class="section">Some section</div>
+	<div class="section">Some section</div>
 </div>
+	<script>
+		new fullpage('#fullpage');
+	</script>
 </body>
 
 </html>
