deploy: 61f97406e774a8fc5046a07236f8295da6112874

--- a/satellitter/index.html
+++ b/satellitter/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Satellitt i Norge - </title>
+	<title>Satellitt i Norge - Satellitter</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
@@ -52,7 +52,8 @@
 </nav>
 	<div class="page-wrapper">
 		<div class="content-wrapper">
-			<h1>Satellitter</h1>
+			<h1 id="satellitter">Satellitter</h1>
+
 		</div>
 		<footer class="footer">
 
