deploy: 73cf8acf4a0571fe0c8a91d1a1feaba7054e1d93

--- a/satellitter/index.html
+++ b/satellitter/index.html
@@ -54,6 +54,40 @@
 		<div class="content-wrapper">
 			<h1 id="satellitter">Satellitter</h1>
 
+<h2 id="sporing">Sporing</h2>
+
+<p>På denne nettsiden kan du spore satellitter:
+<a href="https://www.n2yo.com/">https://www.n2yo.com/</a></p>
+
+<h2 id="tilgjengelige-satellitter">Tilgjengelige satellitter</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center">Navn</th>
+      <th style="text-align: center">Type</th>
+      <th style="text-align: center">Frekvens</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">Noaa 15</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+    <tr>
+      <td style="text-align: center">Noaa 18</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+    <tr>
+      <td style="text-align: center">Noaa 19</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+  </tbody>
+</table>
+
 		</div>
 		<footer class="footer">
 
