--- a/src/index.html
+++ b/src/index.html
@@ -4,32 +4,22 @@ layout: frontpage
 ---
 <div id="fullpage">
 	<div class="section">
-		<div class="full-page-wrapper">
+		<div class="full-page-wrapper front-1">
 			{% include navigation.html %}
-			<h1>Nedlasting av data fra en ekte satellitt</h1>
-			<div class="introduction">
-				<div class="content-wrap">
-					<h1>Har du ønsket å motta satellittdata i norge?</h1>
-					<p>Det finnes mange satellitter som sirkulerer rundt jorda, og av disse er det flere som sender
-						kontinuerlig
-						informasjon som alle kan motta. Av disse, er de fleste værsatellitter, men det finnes også
-						satellitter
-						som
-						NORSat.</p>
-					<p>Selv om det er relativt lett å få tak i mye av denne dataen fra nettsidene til eierne, er å motta
-						data
-						fra en
-						ekte satellitt som flyr over hodet ditt et kult hobbyprosjekt. Denne nettsiden er laget for å
-						samle
-						informasjon om mottak fra satellitter i Norge, slik at det er lettere å få dette til.</p>
-					<p>Denne nettsiden skal hjelpe deg igang med å laste ned data fra ekte satelitter i Norge.
-						Velkommen!
-					</p>
+			<div class="content-wrap">
+				<h1>Lag din egen satellittmottaker</h1>
+				<p>Her får du detaljerte beskrivelser som forteller deg hvordan du kan lage din helt egen
+					satellittmottaker, så du kan hente ned data fra alle favorittsatellittene dine!</p>
+				<div style="margin: 30px;">
+					<img src="/eit-satellitt-i-norge/assets/images/frontpagegraphic.svg">
 				</div>
+				<p>Alt fra bruksanvisinger, innkjøpslister og lenker til satellitt-tracking kan du finne her. </p>
+				<a class="blue-button" href="/eit-satellitt-i-norge/instruksjoner/">Instruksjoner</a>
 			</div>
 		</div>
 	</div>
-	<div class="section">Some section</div>
-	<div class="section">Some section</div>
+	<div class="section">
+		<div class="full-page-wrapper front-2">Some section</div>
+	</div>
 	<div class="section">Some section</div>
 </div>
