deploy: c01280198a8672869eab0944c99fc0c6b6810280

--- a/index.html
+++ b/index.html
@@ -66,13 +66,37 @@
 				<p>Alt fra bruksanvisinger, innkjøpslister og lenker til satellitt-tracking kan du finne her. </p>
 				<a class="blue-button" href="/eit-satellitt-i-norge/instruksjoner/">Instruksjoner</a>
 			</div>
+			<img src="/eit-satellitt-i-norge/assets/images/down-chevron.svg" width="50" style="margin-bottom: 50px;">
 		</div>
 	</div>
 	<div class="section">
-		<div class="full-page-wrapper front-2">Some section</div>
+		<div class="full-page-wrapper front-2">
+			<div class="content-wrap">
+				<h1>Data fra hjemmelaget mottaker</h1>
+				<p>Dette bildet ble hentet fra NOVA 19-satellitten ved hjelp av en hjemmelaget mottaker. Her brukte man
+					programmet Satellite4ALL for å hente inn informasjonen.</p>
+				<a class="blue-button" href="/eit-satellitt-i-norge/satellitter/">Satellitter</a>
+			</div>
+			<img src="/eit-satellitt-i-norge/assets/images/down-chevron.svg" width="50" style="margin-bottom: 50px;">
+		</div>
 	</div>
-	<div class="section">Some section</div>
+	<div class="section">
+		<div class="full-page-wrapper front-3">
+			<div class="content-wrap">
+				<h1>Dette kan du bruke dataen til</h1>
+				<p>Satellitter samler inn enorme mengder data som sendes ned til Jorda. Mottakeren vår lar deg hente
+					inn denne informasjonen på enkelt vis. Det spiller ingen rolle du ønsker meteorologiske data til
+					avhandlingen din eller bare et kult satellittbilde å ha på kontoret.</p>
+				<p>Sett igang og bygg, så vil mulighetene åpne seg.</p>
+				<a class="blue-button" href="/eit-satellitt-i-norge/faq/">Muligheter</a>
+			</div>
+			<footer class="footer">
+
+</footer>
+		</div>
+	</div>
 </div>
+
 	<script>
 		new fullpage('#fullpage', { lazyLoading: false });
 	</script>
