deploy: 719d1203a614acec798eeffcd612604d9757c945

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     
   </div>
 </nav>
+<div class="nav-space"></div>
 			<div class="content-wrap">
 				<h1>Lag din egen satellittmottaker</h1>
 				<p>Her får du detaljerte beskrivelser som forteller deg hvordan du kan lage din helt egen
@@ -91,8 +92,31 @@
 				<a class="blue-button" href="/eit-satellitt-i-norge/faq/">Muligheter</a>
 			</div>
 			<footer class="footer">
-
+    <div>
+        <p>TJENESTER</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Kontakt</a></p>
+        <p><a href="/eit-satellitt-i-norge/faq/">FAQ</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>INFORMASJON</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/"></a>Om oss</a></p>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Om prosjektet</a></p>
+        <p><a href="#">Informasjonskapsler</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>ANNET</p>
+    </div>
+    <div>
+        <p><a href="#">Varsler</a></p>
+    </div>
 </footer>
+
 		</div>
 	</div>
 </div>
