--- a/mer-info/index.html
+++ b/mer-info/index.html
@@ -50,14 +50,36 @@
     
   </div>
 </nav>
-	<div class="page-wrapper">
-		<div class="content-wrapper">
-			<h1>Mer info</h1>
-		</div>
-		<footer class="footer">
-
-</footer>
+<div class="nav-space"></div>
+	<div class="content-wrapper">
+		<h1>Mer info</h1>
 	</div>
+	<footer class="footer">
+    <div>
+        <p>TJENESTER</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Kontakt</a></p>
+        <p><a href="/eit-satellitt-i-norge/faq/">FAQ</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>INFORMASJON</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/"></a>Om oss</a></p>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Om prosjektet</a></p>
+        <p><a href="#">Informasjonskapsler</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>ANNET</p>
+    </div>
+    <div>
+        <p><a href="#">Varsler</a></p>
+    </div>
+</footer>
+
 </body>
 
 </html>
