--- a/satellitter/index.html
+++ b/satellitter/index.html
@@ -50,9 +50,9 @@
     
   </div>
 </nav>
-	<div class="page-wrapper">
-		<div class="content-wrapper">
-			<h1 id="satellitter">Satellitter</h1>
+<div class="nav-space"></div>
+	<div class="content-wrapper">
+		<h1 id="satellitter">Satellitter</h1>
 
 <h2 id="sporing">Sporing</h2>
 
@@ -88,11 +88,33 @@
   </tbody>
 </table>
 
-		</div>
-		<footer class="footer">
-
-</footer>
 	</div>
+	<footer class="footer">
+    <div>
+        <p>TJENESTER</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Kontakt</a></p>
+        <p><a href="/eit-satellitt-i-norge/faq/">FAQ</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>INFORMASJON</p>
+    </div>
+    <div>
+        <p><a href="/eit-satellitt-i-norge/mer-info/"></a>Om oss</a></p>
+        <p><a href="/eit-satellitt-i-norge/mer-info/">Om prosjektet</a></p>
+        <p><a href="#">Informasjonskapsler</a></p>
+    </div>
+    <div style="width: 100px"></div>
+    <div>
+        <p>ANNET</p>
+    </div>
+    <div>
+        <p><a href="#">Varsler</a></p>
+    </div>
+</footer>
+
 </body>
 
 </html>
