--- a/satellitter/liste/index.html
+++ b/satellitter/liste/index.html
@@ -51,26 +51,44 @@
   </div>
 </nav>
 <div class="nav-space"></div>
-	<div class="card-container">
-    <div class="card">
-        <h2>Sporing</h2>
-        <p>Nettsiden n2yo.com lar deg spore satellitter i sanntid.</p>
-        <img class="graphic" src="/eit-satellitt-i-norge/assets/images/marker.svg">
-        <a href="https://www.n2yo.com/" class="blue-button">GÅ TIL N2YO.COM</a>
-    </div>
-    <div class="card">
-        <h2>Tilgjengelige satellitter</h2>
-        <p>Her kan du finne en oversikt over satellitter som du kan motta data fra.</p>
-        <img class="graphic" src="/eit-satellitt-i-norge/assets/images/dish.svg">
-        <a href="/eit-satellitt-i-norge/satellitter/liste/" class="blue-button">SE LISTE</a>
-    </div>
-    <div class="card">
-        <h2>Muligheter</h2>
-        <p>Her kan du lese litt mer om hva dataene kan brukes til.</p>
-        <img class="graphic" src="/eit-satellitt-i-norge/assets/images/stonks.svg">
-        <a href="/eit-satellitt-i-norge/mer-info/" class="blue-button">LES MER</a>
-    </div>
-</div>
+	<div class="content-wrapper">
+		<h1 id="satellitter">Satellitter</h1>
+
+<h2 id="sporing">Sporing</h2>
+
+<p>På denne nettsiden kan du spore satellitter:
+<a href="https://www.n2yo.com/">https://www.n2yo.com/</a></p>
+
+<h2 id="tilgjengelige-satellitter">Tilgjengelige satellitter</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center">Navn</th>
+      <th style="text-align: center">Type</th>
+      <th style="text-align: center">Frekvens</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">Noaa 15</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+    <tr>
+      <td style="text-align: center">Noaa 18</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+    <tr>
+      <td style="text-align: center">Noaa 19</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">137Mhz</td>
+    </tr>
+  </tbody>
+</table>
+
+	</div>
 	<footer class="footer">
     <div>
         <p>TJENESTER</p>
