--- a/src/satellitter/index.html
+++ b/src/satellitter/index.html
@@ -7,7 +7,7 @@ layout: plain
         <h2>Sporing</h2>
         <p>Nettsiden n2yo.com lar deg spore satellitter i sanntid.</p>
         <img class="graphic" src="/eit-satellitt-i-norge/assets/images/marker.svg">
-        <a href="https://www.n2yo.com/" class="blue-button">GÅ TIL N2YO.COM</a>
+        <a href="https://www.n2yo.com/" target="_blank" class="blue-button">GÅ TIL N2YO.COM</a>
     </div>
     <div class="card">
         <h2>Tilgjengelige satellitter</h2>
@@ -19,6 +19,6 @@ layout: plain
         <h2>Muligheter</h2>
         <p>Her kan du lese litt mer om hva dataene kan brukes til.</p>
         <img class="graphic" src="/eit-satellitt-i-norge/assets/images/stonks.svg">
-        <a href="/eit-satellitt-i-norge/mer-info/" class="blue-button">LES MER</a>
+        <a href="/eit-satellitt-i-norge/satellitter/muligheter/" class="blue-button">LES MER</a>
     </div>
 </div>
