deploy: 53265e8c919c43836652fb7bf59a79f44076d46e

--- a/satellitter/muligheter/index.html
+++ b/satellitter/muligheter/index.html
@@ -52,36 +52,11 @@
 </nav>
 <div class="nav-space"></div>
 	<div class="content-wrapper">
-		<h1 id="tilgjengelige-satellitter">Tilgjengelige satellitter</h1>
+		<h1 id="muligheter">Muligheter</h1>
 
-<p>Under kan du se en oversikt over satellitter som du kan motta data fra.</p>
+<p>Så, hva kan dataene brukes til?</p>
 
-<table>
-  <thead>
-    <tr>
-      <th style="text-align: center">Navn</th>
-      <th style="text-align: center">Type</th>
-      <th style="text-align: center">Frekvens</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: center">Noaa 15</td>
-      <td style="text-align: center">Værsatellitt</td>
-      <td style="text-align: center">137Mhz</td>
-    </tr>
-    <tr>
-      <td style="text-align: center">Noaa 18</td>
-      <td style="text-align: center">Værsatellitt</td>
-      <td style="text-align: center">137Mhz</td>
-    </tr>
-    <tr>
-      <td style="text-align: center">Noaa 19</td>
-      <td style="text-align: center">Værsatellitt</td>
-      <td style="text-align: center">137Mhz</td>
-    </tr>
-  </tbody>
-</table>
+<p>Hvis du har tanker om hva slags satellitt du vil peile deg inn på, kan du klikke på en av kategoriene under. Hvis ikke, så kan du bla nedover og lese om de ulike typene.</p>
 
 	</div>
 	<footer class="footer">
