--- a/instruksjoner/index.html
+++ b/instruksjoner/index.html
@@ -90,6 +90,8 @@
 
 <h2 id="sublevel">Sublevel</h2>
 
+\[x = y^2\]
+
 <p>Hei på deg, her er litt informasjon</p>
 
 <p>Hei på deg, her er litt informasjon</p>
@@ -162,3 +164,6 @@
 </body>
 
 </html>
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
