deploy: b6d29504ebff60cc9c3e571604345af9bd390570

--- a/instruksjoner/index.html
+++ b/instruksjoner/index.html
@@ -136,6 +136,7 @@
 <p>Hei på deg, her er litt informasjon</p>
 
         </div>
+        <div style="grid-area: empty; min-width: 250px;"></div>
     </div>
     <footer class="footer">
     <div>
