--- a/instruksjoner/innkjopsliste/index.html
+++ b/instruksjoner/innkjopsliste/index.html
@@ -93,6 +93,7 @@
 </ol>
 
         </div>
+        <div style="grid-area: empty; min-width: 250px;"></div>
     </div>
     <footer class="footer">
     <div>
