--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -1,3 +1,41 @@
 ---
+title: Faq
+layout: faq_front
 ---
-<h1>FAQ</h1>
+<div class="faq-element faq-element-header ">
+	<h1><img src="../assets/images/questionmark.svg" />Faq</h1>
+	<p>Har du spørsmål om satellitter, montering eller trenger du hjelp med feilsøking? </p>
+	<p>Velg èn av kategoriene under for å få hjelp</p>
+</div>
+<div class="faq-options">
+	<div class="faq-element">
+		<h1>Satellitter</h1>
+		<p>Har du spørsmål angående satellitter, frekvensspekter osv?</p>
+		<div class="img-container">
+			<img src="../assets/images/satellite-1.svg" />
+		</div>
+		<div class="faq-link-button">
+			<a href="satellitter.html"><h3>Se spørsmål</h3></a>
+		</div>
+	</div>
+	<div class="faq-element">
+		<h1>Montasje</h1>
+		<p>Lurer du på noe angående montasje, innkjøp eller lignende?</p>
+		<div class="img-container">
+			<img src="../assets/images/hammer.svg" />
+		</div>
+		<div class="faq-link-button">
+			<a href="montasje.html"><h3>Se spørsmål</h3></a>
+		</div>
+	</div>
+	<div class="faq-element">
+		<h1>Feilsøking</h1>
+		<p>Får du ikke inn signaler eller lurer du på hvordan du kan forbedre dem?</p>
+		<div class="img-container">
+			<img src="../assets/images/person.svg" />
+		</div>
+		<div class="faq-link-button">
+			<a href="feilsoking.html"><h3>Se spørsmål</h3></a>
+		</div>
+	</div>
+</div>
