deploy: 7987dd188609e0bf3a7d5d14d81125328800bdb8

--- a/faq/satellitter.html
+++ b/faq/satellitter.html
@@ -3,11 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Satellitt i Norge - Faq</title>
+	<title>Satellitt i Norge - </title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
-	<link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/faq.css" />
 </head>
 
 <body>
@@ -55,44 +54,9 @@
   </div>
 </nav>
 <div class="nav-space"></div>
-	<div class="faq-front-wrapper">
-		<div class="faq-element faq-element-header ">
-	<h1><img src="../assets/images/questionmark.svg" />Faq</h1>
-	<p>Har du spørsmål om satellitter, montering eller trenger du hjelp med feilsøking? </p>
-	<p>Velg èn av kategoriene under for å få hjelp</p>
-</div>
-<div class="faq-options">
-	<div class="faq-element">
-		<h1>Satellitter</h1>
-		<p>Har du spørsmål angående satellitter, frekvensspekter osv?</p>
-		<div class="img-container">
-			<img src="../assets/images/satellite-1.svg" />
-		</div>
-		<div class="faq-link-button">
-			<a href="satellitter.html"><h3>Se spørsmål</h3></a>
-		</div>
-	</div>
-	<div class="faq-element">
-		<h1>Montasje</h1>
-		<p>Lurer du på noe angående montasje, innkjøp eller lignende?</p>
-		<div class="img-container">
-			<img src="../assets/images/hammer.svg" />
-		</div>
-		<div class="faq-link-button">
-			<a href="montasje.html"><h3>Se spørsmål</h3></a>
-		</div>
-	</div>
-	<div class="faq-element">
-		<h1>Feilsøking</h1>
-		<p>Får du ikke inn signaler eller lurer du på hvordan du kan forbedre dem?</p>
-		<div class="img-container">
-			<img src="../assets/images/person.svg" />
-		</div>
-		<div class="faq-link-button">
-			<a href="feilsoking.html"><h3>Se spørsmål</h3></a>
-		</div>
-	</div>
-</div>
+	<div class="content-wrapper">
+		<h1 id="hei">Hei</h1>
+
 	</div>
 	<footer class="footer">
     <div>
