--- a/teori/index.html
+++ b/teori/index.html
@@ -15,6 +15,14 @@
 
 
 <body>
+    <div class="help">
+        <img src="/eit-satellitt-i-norge/assets/images/question.svg">
+        <div style="padding: 15px">
+            <span>Lurer du på noe?</span>
+            <br>
+            <span>Trykk <a href="/eit-satellitt-i-norge/faq/">her</a>.</span>
+        </div>
+    </div>
     <nav class="nav-bar">
   <a href="/eit-satellitt-i-norge/">
     <div style="display: flex; flex-direction: row; align-items: center;">
