deploy: f8c357d4d0616f3c18f38daa8f47ccda3bd68bbc

--- a/satellitter/muligheter/index.html
+++ b/satellitter/muligheter/index.html
@@ -67,7 +67,7 @@
         <p>TJENESTER</p>
     </div>
     <div>
-        <p><a href="/eit-satellitt-i-norge/mer-info/">Kontakt</a></p>
+        <p><a href="javascript:;">Kontakt</a></p>
         <p><a href="/eit-satellitt-i-norge/faq/">FAQ</a></p>
     </div>
     <div style="width: 100px"></div>
@@ -75,16 +75,16 @@
         <p>INFORMASJON</p>
     </div>
     <div>
-        <p><a href="/eit-satellitt-i-norge/mer-info/"></a>Om oss</a></p>
-        <p><a href="/eit-satellitt-i-norge/mer-info/">Om prosjektet</a></p>
-        <p><a href="#">Informasjonskapsler</a></p>
+        <p><a href="javascript:;">Om oss</a></p>
+        <p><a href="javascript:;">Om prosjektet</a></p>
+        <p><a href="javascript:;">Informasjonskapsler</a></p>
     </div>
     <div style="width: 100px"></div>
     <div>
         <p>ANNET</p>
     </div>
     <div>
-        <p><a href="#">Varsler</a></p>
+        <p><a href="javascript:;">Varsler</a></p>
     </div>
 </footer>
 
