--- a/satellitter/liste/index.html
+++ b/satellitter/liste/index.html
@@ -65,23 +65,45 @@
       <th style="text-align: center">Navn</th>
       <th style="text-align: center">Type</th>
       <th style="text-align: center">Frekvens</th>
+      <th style="text-align: center">Sporing</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: center">Noaa 15</td>
+      <td style="text-align: center">NOAA 15</td>
       <td style="text-align: center">Værsatellitt</td>
       <td style="text-align: center">137Mhz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=25338">N2YO</a></td>
     </tr>
     <tr>
-      <td style="text-align: center">Noaa 18</td>
+      <td style="text-align: center">NOAA 18</td>
       <td style="text-align: center">Værsatellitt</td>
       <td style="text-align: center">137Mhz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=28654">N2YO</a></td>
     </tr>
     <tr>
-      <td style="text-align: center">Noaa 19</td>
+      <td style="text-align: center">NOAA 19</td>
       <td style="text-align: center">Værsatellitt</td>
       <td style="text-align: center">137Mhz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=33591">N2YO</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center">METOP-A</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">1,7Ghz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=29499">N2YO</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center">METOP-B</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">1,7Ghz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=38771">N2YO</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: center">METOP-C</td>
+      <td style="text-align: center">Værsatellitt</td>
+      <td style="text-align: center">1,7Ghz</td>
+      <td style="text-align: center"><a href="https://www.n2yo.com/satellite/?s=43689">N2YO</a></td>
     </tr>
   </tbody>
 </table>
