deploy: 88935dfddc4d970942a54995d53a5ede18944a9d

--- a/teori/elektronikk/index.html
+++ b/teori/elektronikk/index.html
@@ -108,6 +108,7 @@
 <h3 id="referanser">Referanser</h3>
 
 <ul>
+  <li>Orbital research (u.å.) Low Noise Amplifiers (LNAs). Hentet fra <a href="https://orbitalresearch.net/products/lna/">https://orbitalresearch.net/products/lna/</a></li>
   <li>ElectronicsTutorials (u.å.) Passive Band Pass Filter. Hentet fra <a href="https://www.electronics-tutorials.ws/filter/filter_4.html">https://www.electronics-tutorials.ws/filter/filter_4.html</a></li>
 </ul>
 
