deploy: 20eeba279dcadd97ab7a675665f406ed2d638d5a

--- a/satellitter/liste/index.html
+++ b/satellitter/liste/index.html
@@ -55,7 +55,7 @@
 </nav>
 <div class="nav-space"></div>
 	<div class="content-wrapper">
-		<h1 id="-tilgjengelige-satellitter">📡 Tilgjengelige satellitter</h1>
+		<h1 id="tilgjengelige-satellitter">Tilgjengelige satellitter</h1>
 
 <p>Under kan du se en oversikt over satellitter som du kan motta data fra.</p>
 
