deploy: fe80dcaaf319e05ccd4c03bac230825a524defd2

--- a/instruksjoner/montering/index.html
+++ b/instruksjoner/montering/index.html
@@ -91,16 +91,31 @@
 
 <h2 id="3d-printe-deler">3D-printe deler</h2>
 
-<p><strong>Modell-filer:</strong></p>
+<p>Filene er gitt i STL-format, og du trenger selv å bruke programvaren som følger med 3D-printeren din for å forberede den til printing. Vi kan dog anbefale å bruke sliceren “Ultimaker Cura”, da denne er populær, funksjonell, og funker med de fleste 3D-printere. Ellers anbefaler vi at du oppsøker dokumentasjon fra produsenten av 3D-printeren for denne delen av prosessen.</p>
 
-<ul>
-  <li>Antenne guide - last ned</li>
-  <li>Håndtak - last ned</li>
-  <li>Parabol (1/8-del) - last ned</li>
-  <li>Stang - last ned</li>
-</ul>
+<h3 id="antenne-guide">Antenne-guide</h3>
 
-<p>Filene er gitt i STL-format, og du trenger selv å bruke programvaren som følger med 3D-printeren din for å forberede den til printing. Vi kan dog anbefale å bruke sliceren “Ultimaker Cura”, da denne er populær, funksjonell, og funker med de fleste 3D-printere. Ellers anbefaler vi at du oppsøker dokumentasjon fra produsenten av 3D-printeren for denne delen av prosessen</p>
+<p><img src="/eit-satellitt-i-norge/assets/images/antenne-guide.png" alt="Antenne-guide" /></p>
+
+<p><a href="https://github.com/petterroea/eit-satellitt-i-norge/raw/main/models/Antenne%20guide%20sirkulaer%20h%C3%B8yre.STL"><strong>Last ned</strong></a></p>
+
+<h3 id="håndtak">Håndtak</h3>
+
+<p><img src="/eit-satellitt-i-norge/assets/images/handtak.png" alt="Håndtak" /></p>
+
+<p><a href="https://github.com/petterroea/eit-satellitt-i-norge/raw/main/models/H%C3%A5ndtak.STL"><strong>Last ned</strong></a></p>
+
+<h3 id="parabol-18-del">Parabol (1/8-del)</h3>
+
+<p><img src="/eit-satellitt-i-norge/assets/images/pizza.png" alt="Pizzastykke" /></p>
+
+<p><a href="https://github.com/petterroea/eit-satellitt-i-norge/raw/main/models/Satellitt%20pizzastykke%203d%20print%20optimalisert%20og%20med%20hull.STL"><strong>Last ned</strong></a></p>
+
+<h3 id="stang">Stang</h3>
+
+<p><img src="/eit-satellitt-i-norge/assets/images/stang.png" alt="Stang" /></p>
+
+<p><a href="https://github.com/petterroea/eit-satellitt-i-norge/raw/main/models/Stang.STL"><strong>Last ned</strong></a></p>
 
         </div>
         <div style="grid-area: empty; min-width: 250px;"></div>
