--- a/teori/index.html
+++ b/teori/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Guide - Teori</title>
+    <title>Teori</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/eit-satellitt-i-norge/assets/css/default.css" />
